--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@ h1,
 h2,
 h3,
 h4,
-ul {
+ul,
+button {
   margin: 0;
   padding: 0;
 }
@@ -28,4 +29,9 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+button {
+  border: 0;
+  background: transparent;
 }
